get reservation masterlist for admin view
